# MSP

./: .gitignore  0-astronify.py  1-profile2wave.py  2-amp2loud.py  3-griffinlim.py  4-hifi-gan.py  5-musicnet.py  Astro-Sonify.ipynb  CHANGELOG.md  CONTRIBUTING.md  CodeReview.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
Data/: ParkesBurst.npy  Profile.npy
HiFiGAN/: meldataset.py  models.py  train.py
HiFiGAN/data/: preprocess.sh  split_audio.py  train_data.txt  val_data.txt
MusicNet/: utils.py  wavenet_generator.py
MusicNet/checkpoints/pretrained_musicnet/: args.pth
docs/plans/: 2026-03-03-pypi-release-design.md  2026-03-03-pypi-release-implementation.md
examples/: reproduce_legacy_wavs.py
src/astrosonify/: __init__.py  amplitude.py  astronify_method.py  cli.py  core.py  griffinlim.py  hifigan.py  hub.py  musicnet.py  profile.py
src/astrosonify/models/hifigan/: LICENSE  __init__.py  env.py  generator.py
src/astrosonify/models/musicnet/: LICENSE  utils.py  wavenet.py  wavenet_generator.py  wavenet_models.py
src/radiosonify/: __init__.py  amplitude.py  cli.py  core.py  griffinlim.py  hifigan.py  hub.py  musicnet.py  profile.py
src/radiosonify/models/hifigan/: LICENSE  __init__.py  env.py  generator.py
src/radiosonify/models/musicnet/: __init__.py  utils.py  wavenet.py  wavenet_generator.py  wavenet_models.py
tests/: test_amplitude.py  test_astronify_method.py  test_cli.py  test_core.py  test_examples.py  test_griffinlim.py  test_hifigan.py  test_hub.py  test_musicnet.py  test_profile.py
