[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radiosonify"
version = "0.1.2"
description = "Methods for Sonifying Pulse - Convert radio telescope data into audible sound"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "XiaoQing", email = ""},
]
keywords = ["astronomy", "sonification", "radio-pulse", "audio", "FRB"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy",
    "scipy",
    "librosa",
    "soundfile",
    "huggingface_hub",
    "click",
]

[project.optional-dependencies]
hifigan = ["torch", "scikit-image"]
musicnet = ["torch", "tqdm"]
all = ["torch", "scikit-image", "tqdm"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
radiosonify = "radiosonify.cli:main"

[project.urls]
Homepage = "https://github.com/SukiYume/MSP"
Repository = "https://github.com/SukiYume/MSP"

[tool.hatch.build.targets.sdist]
include = ["src/radiosonify"]

[tool.hatch.build.targets.wheel]
packages = ["src/radiosonify"]

[tool.hatch.build.targets.wheel.force-include]
"src/radiosonify/py.typed" = "radiosonify/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
